Warn when exporting layers with multiple transparency masks into .psd

Added MultiTransparencyMaskCheck.h that shows a warning message
whenever an unsaved, new document is exported to a file format
that doesn't support a layer with multiple transparency masks.

BUG:430240
FIXED IN:5.0.0